Fix html overflow.

--- a/src/renderer/components/App/App.scss
+++ b/src/renderer/components/App/App.scss
@@ -8,6 +8,7 @@ body {
 	user-select: none;
 	background-color: $backgroundColor;
 	color: $clearColor;
+	overflow: hidden;
 }
 
 *,
